login and thumbnails fix

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# 환경변수 파일 (민감한 정보 포함)
+.env
+.env.local
+.env.*.local
+
 # Python
 __pycache__/
 *.py[cod]
@@ -7,29 +12,87 @@ __pycache__/
 env/
 venv/
 ENV/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
 *.egg-info/
+.installed.cfg
+*.egg
 
-# Flask
-instance/
-.webassets-cache
-
-# Database
+# 데이터베이스
 *.db
 *.sqlite
 *.sqlite3
+board.db
 
-# Uploads
+# 업로드 파일 (로컬)
 uploads/
+static/uploads/
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-
-# OS
+*~
 .DS_Store
-Thumbs.db
 
-# Environment
-.env
+# 로그
+*.log
+logs/
+
+# 테스트
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+
+# 백업 파일
+backup/
+*.bak
+*.backup
+
+# 임시 파일
+tmp/
+temp/
+*.tmp
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# 환경 설정 (개인)
+config.local.py
+secrets.py
+credentials.json
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Linux
+*~
+
+# 배포 관련
+*.pem
+*.key
+*.cert
+
+# 민감한 문서
+SECRETS.md
+PASSWORDS.txt
+credentials.txt
